Tooltip - fix alignment

--- a/packages/ui/src/5-elements/_tooltip.scss
+++ b/packages/ui/src/5-elements/_tooltip.scss
@@ -9,14 +9,14 @@
   [class*="icon"]::before { vertical-align:middle; }
   &-popup {
     display: none;
-    position:absolute; inset-inline-start:0; inset-block-end:calc(100% + 6px); margin-inline-start:-20px;
+    position:absolute; inset-inline-start:0; inset-block-end:calc(100% + 6px);
     padding-block: pxToRem(4); padding-inline:pxToRem(8); max-inline-size:pxToRem(180); width:max-content;
     background-color: hsl(var(--p-tooltip--bg-color));
     font-size:var(--font-size-0); line-height:1.5;
     color: hsl(var(--p-tooltip-text-color));
     border-radius: var(--border-radius-small);
 
-    &.is-bottom { inset-block-start:calc(100% + 6px); inset-block-end:auto; }
+    &.is-bottom { inset-block-start:calc(100% + 10px); inset-block-end:auto; }
 
     //&::before {
     //  position:absolute; inset-block-start:100%; inset-inline-start:pxToRem(25);
